[package]
name = "cent-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cent-reg"
path = "src/cent-reg.rs"

[dependencies]
cent = {path = "../cent"}
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4"
simple_logger = {version = "4.2", features = ["stderr"]}

