[package]
name = "cent-reg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
cent-core = {path = "../cent-core"}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
log = "0.4"
chrono = {version = "0.4", features = ["serde"]}
