
SRCS += files(
    'cent.cpp',
    'http_client.cpp',
    'logs.cpp',
    'reference.cpp',
    'registry_client.cpp',
    'media_type.cpp',
    'manifest_list.cpp',
    'manifest.cpp',
    'storage.cpp',
    'lock_file.cpp',
    'workspace.cpp',
    'strutil.cpp'
)

subdir('drv')
subdir('runtime')
subdir('storage')