
test_enum_arr = executable('test_enum_arr', 'enum_arr.cpp', kwargs: TEST_KWARGS)
test_cast = executable('test_cast', 'cast.cpp', kwargs: TEST_KWARGS)
test_defer = executable('test_defer', 'defer.cpp', kwargs: TEST_KWARGS)
test_strutil = executable('test_strutil', 'strutil.cpp', kwargs: TEST_KWARGS)

test('Enum Array', test_enum_arr)
test('Cast', test_cast)
test('Defer', test_defer)
test('Strutil', test_strutil)
