

TESTS += {
  'dt_cstr': {
    'srcs': files('cstr.cpp'),
    'deps': libcent_dep,
  },
  'dt_enum_arr': {
    'srcs': files('enum_arr.cpp'),
    'deps': libcent_dep,
  },
  'dt_result': {
    'srcs': files('result.cpp'),
    'deps': libcent_dep,
  },
  'dt_flat_multimap': {
    'srcs': files('flat_multimap.cpp'),
    'deps': libcent_dep,
  },
}
